--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Blog of Janos Szurdi
+title: Janos Szurdi
 
 # Your name to show in the footer
 author: Janos Szurdi
